--- a/index.html
+++ b/index.html
@@ -156,8 +156,39 @@ and make up the bulk of the card.</p><h5 class="text-primary">Price : 20$</h5></
           <button type="button" class="btn btn-primary btn-lg my5">See More Courses</button>
 
         </section>
-
         <!-- See More Courses end -->
+        <!-- working start -->
+        <section class="container bg-light">
+         <div class="d-flex align-items-center">
+          <div><img src="images/working.png" alt=""></div>
+          <div class="">
+            <div class="ms-5"><h1>Explore The elearning <br>
+              Institute</h1> <p>There are many variations of passages of Lorem Ipsum available, but the 
+                 majority have suffered alteration in some form, by injected humour, or
+                randomised words which don't look even slightly believable. If you are going
+                to use a passage of Lorem Ipsum, you need to be sure.
+                
+                <br>
+               <br> Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                generators on the Internet tend to repeat predefined.</p></div>
+            <div class="d-flex"><div class="ms-5">
+              <h1>3.2K+</h1>
+              <p>Online Course</p>
+            </div>
+            <div class="ms-5">
+              <h1>3.2K+</h1>
+              <p>Online Course</p>
+            </div>
+            <div class="ms-5">
+              <h1>3.2K+</h1>
+              <p>Online Course</p>
+            </div></div>
+            <div  class="ms-5">          <button type="button" class="btn btn-primary btn-lg my5">See More Courses</button>
+            </div>
+          </div>
+         </div>
+        </section>
+        <!-- working end -->
 
     </main>
 
