corrent student done

--- a/index.html
+++ b/index.html
@@ -189,6 +189,34 @@ and make up the bulk of the card.</p><h5 class="text-primary">Price : 20$</h5></
          </div>
         </section>
         <!-- working end -->
+        <!-- reg part start -->
+
+        <section class="my-5 bg-primary rounded-1 container">
+          <div class="d-flex justify-content-between align-items-center ms-5 py-5 text-white">
+            <div><h1>Ready to join?</h1><p>It is a long established fact that a reader will be distracted by the <br>
+              readable content of a page when looking at its layout.</p></div>
+            <div class="bg-white rounded me-5"><button type="button" class="btn btn- text-prima btn-lg my5 text-primary">Register Now</button></div>
+          </div>
+        </section>
+        <!-- reg part end -->
+        <!-- current student start -->
+
+        <section class="container">
+          <div class="ms-3"><h1 class="mt-5 mb-3">Meet Our Successfull
+           <br> Students</h1> <p class="mb-5">It is a long established fact that a reader will be distracted by the
+             <br> readable content of a page when looking at its layout.</p></div>
+          <div class="d-flex justify-content-between">
+            <div class="ms-3 border rounded-2"><img class="img-fluid" src="images/student/student-1.png" alt=""> <h4 class="ms-3">Awlad Hossain</h4> <p class="ms-3">UIUX Designer</p></div>
+            <div class="ms-3 border rounded-2"><img class="img-fluid" src="images/student/student-2.png" alt=""> <h4 class="ms-3">Awlad Hossain</h4> <p class="ms-3">UIUX Designer</p></div>
+            <div class="ms-3 border rounded-2"><img class="img-fluid" src="images/student/student-3.png" alt=""> <h4 class="ms-3">Awlad Hossain</h4> <p class="ms-3">UIUX Designer</p></div>
+            <div class="ms-3 border rounded-2"><img class="img-fluid" src="images/student/student-4.png" alt=""> <h4 class="ms-3">Awlad Hossain</h4> <p class="ms-3">UIUX Designer</p></div>
+          </div>
+        </section>
+        <!-- current student end -->
+        <!-- view all button start -->
+        <div class="d-flex justify-content-center my-5">          <button type="button" class="btn btn-primary btn-lg my5">View All</button>
+        </div>
+        <!-- view all button end -->
 
     </main>
 
