--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body class="d-flex flex-column align-items-center">
     <header class="d-flex flex-column align-items-center justify-content-cenrter">
         <!----------------  navigtion  start--------------->
-        <div class="">
-            <section class="d-flex mx-auto my-2 px-4 align-items-center justify-content-between bg-body-tertiary">
+        
+            <section class="container d-flex mx-auto my-2 px-4 align-items-center justify-content-between bg-body-tertiary">
                 <div class="web-name">
                     <h1 class="fw-bold">Taif Academy</h1>
                 </div>
@@ -54,12 +54,12 @@
                     <button class="fs-3 border border-primary border-2 rounded-2">Register</button>
                 </div>
             </section>
-        </div>
+        
         <!----------------  navigtion  end--------------->
 
         <!------------------- carousel start ------------>
 
-<section class="w-75">
+<section class="container">
   <div id="carouselExampleCaptions" class="carousel slide ">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -112,12 +112,39 @@
 
 
         <!------------------- carousel end ------------>
+        <!-- spinner -->
+
+        <section class="d-flex pt-5"><div class="spinner-grow text-primary" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-secondary" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-success" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-danger" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-warning" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-info" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-light" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <div class="spinner-grow text-dark" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div></section>
+        <!-- spinner -->
 
     </header>
 
     <main>
         <!------------ head line start------------>
-        <div class="my-5 d-flex flex-column align-items-center badge text-black">
+        <div class="my-5 d-flex flex-column align-items-center badge text-black text-bolt">
           <h2>Discover Our Popular <br>
             Courses</h2>
             <p>It is a long established fact that a reader will be distracted by the readable <br>
@@ -158,8 +185,8 @@ and make up the bulk of the card.</p><h5 class="text-primary">Price : 20$</h5></
         </section>
         <!-- See More Courses end -->
         <!-- working start -->
-        <section class="container bg-light">
-         <div class="d-flex align-items-center">
+        <section class="container bg-light mt-5">
+         <div class="d-flex align-items-center mt-5">
           <div><img src="images/working.png" alt=""></div>
           <div class="">
             <div class="ms-5"><h1>Explore The elearning <br>
