--- a/index.html
+++ b/index.html
@@ -348,6 +348,92 @@ and make up the bulk of the card.</p><h5 class="text-primary">Price : 20$</h5></
 
         <!-- feedback  section end -->
 
+        <!-- FAQ saction start -->
+
+
+<section class="container">
+<div class="d-flex flex-column justify-content-center">
+  
+  <div class="badge text-black"> <h1>Frequently Asked Questions</h1> <p>It is a long established fact that a reader will be distracted by the readable
+    <br> content of a page when looking at its layout.</p> </div>
+
+<div>
+  
+  <div class="w-50">
+
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Accordion Item #1
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+</div>
+</section>
+
+
+        <!-- FAQ saction end -->
+
+        <!-------- company logo start----->
+        <section class="container my-5 d-flex justify-content-center">
+          <div class=" badge text-black">
+            <div class="mt-5 mb-3"><h1>Trusted by over 800+ companies</h1></div>
+            <div class="d-flexx justify-content-between">
+              <img class="mx-3" src="images/company/company-1.png" alt="">
+              <img class="mx-3" src="images/company/company-2.png" alt="">
+              <img class="mx-3" src="images/company/company-3.png" alt="">
+              <img class="mx-3" src="images/company/company-4.png" alt="">
+              <img class="mx-3" src="images/company/company-5.png" alt="">
+            </div>
+
+          </div>
+        </section>
+        <!-------- company logo end----->
+<!-- footer start -->
+
+<section class="bg-black mt-5 badge d-flex justify-content-center">
+  <div class="">
+    <div class="text-white"><h1>Pro Edu</h1><p>Office 41, Zawaya Buildin, Ghala Muscat,
+      <br> Sultanate of Oman
+      <br> Privacy Ploicy | Terms of use</p></div>
+     
+  </div>
+</section>
+<!-- footer end -->
     </main>
 
 
