--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 
 </head>
-<body class="d-flex flex-column align-items-center">
+<body class="d-flex flex-column align-items-center jus">
     <header class="d-flex flex-column align-items-center justify-content-cenrter">
         <!----------------  navigtion  start--------------->
         
-            <section class="container d-flex mx-auto my-2 px-4 align-items-center justify-content-between bg-body-tertiary fixed-top">
+            <section class="container d-flex mx-auto my-2 px-4 align-items-center justify-content-between bg-primary text-whites fixed-top rounded-2">
                 <div class="web-name">
-                    <h1 class="fw-bold">Taif Academy</h1>
+                    <h1 class="fw-bold text-white">Taif Academy</h1>
                 </div>
                 <div class="navigation">
                     <nav class="navbar navbar-expand-lg">
@@ -26,7 +26,7 @@
                          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                           </button>
-                          <div class="collapse py-0 navbar-collapse bg-body-tertiary" id="navbarNavDropdown">
+                          <div class="collapse py-0 navbar-collapse bg-primary text-white" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                               <li class="nav-item">
                                 <a class="nav-link active fs-3" aria-current="page" href="#">Home</a>
@@ -257,7 +257,7 @@ and make up the bulk of the card.</p><h5 class="text-primary">Price : 20$</h5></
         <!-- reg part end -->
         <!-- current student start -->
 
-        <section class="container">
+        <section class="container badge text-black">
           <div class="ms-3"><h1 class="mt-5 mb-3">Meet Our Successfull
            <br> Students</h1> <p class="mb-5">It is a long established fact that a reader will be distracted by the
              <br> readable content of a page when looking at its layout.</p></div>
@@ -352,16 +352,16 @@ and make up the bulk of the card.</p><h5 class="text-primary">Price : 20$</h5></
 
 
 <section class="container">
-<div class="d-flex flex-column justify-content-center">
+<div class="">
   
   <div class="badge text-black"> <h1>Frequently Asked Questions</h1> <p>It is a long established fact that a reader will be distracted by the readable
     <br> content of a page when looking at its layout.</p> </div>
 
-<div>
+<div class="w-75">
   
-  <div class="w-50">
+  <div class="">
 
-    <div class="accordion" id="accordionExample">
+    <div class="accordion d-flex flex-column justify-content-center" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -425,9 +425,9 @@ and make up the bulk of the card.</p><h5 class="text-primary">Price : 20$</h5></
         <!-------- company logo end----->
 <!-- footer start -->
 
-<section class="bg-black mt-5 badge d-flex justify-content-center">
-  <div class="">
-    <div class="text-white"><h1>Pro Edu</h1><p>Office 41, Zawaya Buildin, Ghala Muscat,
+<section class="bg-black mt-5 badge d-flex justify-content-center py-5 mx-0">
+  <div class="py-5">
+    <div class="text-white"><h1 class="pb-3">Pro Edu</h1><p>Office 41, Zawaya Buildin, Ghala Muscat,
       <br> Sultanate of Oman
       <br> Privacy Ploicy | Terms of use</p></div>
      
